--- a/src/content/posts/translations/alexandrian-failure-for-the-beginning-gm.mdx
+++ b/src/content/posts/translations/alexandrian-failure-for-the-beginning-gm.mdx
@@ -84,7 +84,7 @@ cover: ~assets/covers/failure-for-the-beginning-gm-1.jpg
 
 Индикатор прогресса — это простой и визуальный способ отслеживания того, насколько близок к достижению тот или иной результат. Существует много разных способов использования индикатора прогресса, но на сегодняшний день, когда персонажи проваливают первую проверку во время выполнения задания (например, проникновение в особняк, отслеживание банды орков, расследование деятельности культа в Двеределле):
 
-![Неудача для начинающего Мастера, изображение №2](ttps://cyborgsandmages.com/images/failure-for-the-beginning-gm-2.jpg.jpg)
+![Неудача для начинающего Мастера, изображение №2](https://cyborgsandmages.com/images/failure-for-the-beginning-gm-2.jpg)
 
 Создайте индикатор прогресса, нарисовав круг и разделив его на четыре, шесть или восемь частей.
 
