--- a/src/content/posts/translations/ben-robinson-revelations.mdx
+++ b/src/content/posts/translations/ben-robinson-revelations.mdx
@@ -11,7 +11,7 @@ author: Бен Робинсон
 translator: pnprpg
 ---
 
-![Разоблачение человека в маске]([media/3e15ba6884690a1d422fe5c46b27d3c8.jpeg](https://cyborgsandmages.com/images/revelations-1.jpg)) 
+![Разоблачение человека в маске](https://cyborgsandmages.com/images/revelations-1.jpg)
 
 С оригиналом статьи Вы можете ознакомиться [здесь](http://arsludi.lamemage.com/index.php/41/revelations/).
 
