--- a/src/content/posts/translations/alexandrian-preparing-2.mdx
+++ b/src/content/posts/translations/alexandrian-preparing-2.mdx
@@ -152,3 +152,13 @@ translator: Станислав "Drakzar" Иванов
 В конечном счете все это очень специфичные и очень персональные решения – вещи, которые цените вы, и которые ценят ваши игроки могут быть совершенно не теми же, что у других групп. Возможно, что ваша группа посчитает, что детализированные планы этажей – это ценные и выразительные вспомогательные средства. Другая же группа посчитает иначе. Черт, да даже та же самая группа может посчитать их бесполезными в другой игре, или же просто на другой сессии! Вещи, которые полезны для одних сценариев, могут оказаться бесполезными для других.
 
 Рассказав вам все это, я надеюсь продолжить серию статей на эту тему в будущем, если, конечно, к ней будет интерес. Я поделюсь с вами некоторыми из наиболее нетрадиционных инструментов и стратегий, которые я применяю в своей собственной грамотной подготовке.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
