--- a/src/content/posts/translations/alexandrian-preparing-4.mdx
+++ b/src/content/posts/translations/alexandrian-preparing-4.mdx
@@ -199,3 +199,13 @@ _\[1\] Hexcrawl – разновидность игры в настольные 
 \[2\] Bang – дословно что-то вроде «бдыщь» или же «хрясь», как я и написал далее. По сути – внезапное и несомненно яркое событие. «Импульс» удобнее для чтения, хотя и не отражает до конца суть термина.
 
 _Источник: < [https://vk.com/@dungeonsandsuffering-gramotnaya-podgotovka-chast-iv](https://vk.com/@dungeonsandsuffering-gramotnaya-podgotovka-chast-iv)\>_
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
