--- a/src/content/posts/translations/alexandrian-preparing-1.mdx
+++ b/src/content/posts/translations/alexandrian-preparing-1.mdx
@@ -98,3 +98,13 @@ Paizo более или менее реализовало себя как игр
 Так что давайте поговорим о том, как она выглядит.
 
 В следующей части.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
