--- a/src/content/posts/translations/alexandrian-preparing-3.mdx
+++ b/src/content/posts/translations/alexandrian-preparing-3.mdx
@@ -66,3 +66,13 @@ translator: Станислав "Drakzar" Иванов
 
 И с этого момента изначальный вызов уже не будет приводить вашу кампанию в движение – он будет просто на поверхности происходящего.
 
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
