--- a/src/content/posts/translations/alexandrian-hexcrwal-5e-design-2-choice-of-hexes.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrwal-5e-design-2-choice-of-hexes.mdx
@@ -199,3 +199,55 @@ translator: Станислав "Drakzar" Иванов
 
 И так далее. Один случайный выпуск _Dungeon_, и вот вы прописали девять гексов. Возьмите с десяток журналов, и вы можете заполнить карту 10 x 10 только лишь ими.
 
+
+---
+
+## Цикл Hexcrawl 5e
+
+1 [Исследование гексов в пятой редакции D&D - часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-2)
+
+2 [Исследование гексов в 5E – Часть 2: Путешествие по диким землям](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-2)
+
+3 [Исследование гексов в пятой редакции D&D - часть 3 - Действия во время смены](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-3-watch-actions)
+
+4 [Исследование гексов в пятой редакции D&D - часть 4 - Навигация](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-4-navigation)
+
+5 [Исследование гексов в пятой редакции D&D - часть 5 - Столкновения](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-5-encounters)
+
+6 [Исследование гексов в пятой редакции D&D - часть 6 - порядок действий в смену](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-6-watch)
+
+7 [Исследование гексов в пятой редакции D&D - часть 7 - Непосредственное исследование гексов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-7-hexploration)
+
+8
+
+9 [Инструменты исследования гексов: следы](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-tools)
+
+10
+
+11 [Дизайн исследования гексов. Часть 2: Подбор гексов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrwal-5e-design-2-choice-of-hexes)
+
+12 [Дизайн исследования гексов. Часть 3: Дополнительное вдохновение](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-design-3-additional-inspiration)
+
+13 Дополнение к исследованию гексов: Специализированные таблицы столкновений
+
+1 [Инструмент для исследования гексов: Таблица слухов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-rumor-tables)
+
+15 Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
+
+16 Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
+
+17 [Инструменты исследования гексов: Дальность обнаружения](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-tools-distance)
+
+18 [Дополнение к исследованию гексов: Свяжите ваши гексы](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-link-hexes)
+
+19 [Эррата на исследование гексов: Использование таблиц столкновений](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-errata-random-encounters)
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
