--- a/src/content/posts/translations/alexandrian-three-clue-rule.mdx
+++ b/src/content/posts/translations/alexandrian-three-clue-rule.mdx
@@ -142,7 +142,7 @@ translator: pnprpg
 
 **Вывод \#1: Поощрительное предоставление улик**
 
-![Friendly clues](https://cyborgsandmages.com/images/three-clue-rule-3.jpg) Максима *«улик много не бывает»* крайне важна, так как естественным импульсом любого создателя сценария-загадки, как мне видится, является стремление к сокрытию информации. Это логично, ведь в конце концов любая «Тайна» характерна именно недостатком информации. И вот как раз здесь кроется разница между *«у нас много улик»* и *«убийца написал свой домашний адрес кровью на стене»*. Как бы-то ни было, соблазн сокрытия информации скорее вреден чем хорош. Когда бы вы ни захотели утаить кусок информации, вы всегда закрываете игрокам один из потенциальных путей к успеху.
+![Friendly clues](https://cyborgsandmages.com/images/three-clue-rule-3.webp) Максима *«улик много не бывает»* крайне важна, так как естественным импульсом любого создателя сценария-загадки, как мне видится, является стремление к сокрытию информации. Это логично, ведь в конце концов любая «Тайна» характерна именно недостатком информации. И вот как раз здесь кроется разница между *«у нас много улик»* и *«убийца написал свой домашний адрес кровью на стене»*. Как бы-то ни было, соблазн сокрытия информации скорее вреден чем хорош. Когда бы вы ни захотели утаить кусок информации, вы всегда закрываете игрокам один из потенциальных путей к успеху.
 
 Это возвращает нас к совету Гэрриотта: *Если нет причин для того чтобы дверь не выносилась из пушки, игрок должен быть вознаграждён за своё оригинальное мышление.*
 
