--- a/src/content/posts/translations/alexandrian-three-clue-rule.mdx
+++ b/src/content/posts/translations/alexandrian-three-clue-rule.mdx
@@ -142,7 +142,9 @@ translator: pnprpg
 
 **Вывод \#1: Поощрительное предоставление улик**
 
-![Friendly clues](https://cyborgsandmages.com/images/three-clue-rule-3.webp) Максима *«улик много не бывает»* крайне важна, так как естественным импульсом любого создателя сценария-загадки, как мне видится, является стремление к сокрытию информации. Это логично, ведь в конце концов любая «Тайна» характерна именно недостатком информации. И вот как раз здесь кроется разница между *«у нас много улик»* и *«убийца написал свой домашний адрес кровью на стене»*. Как бы-то ни было, соблазн сокрытия информации скорее вреден чем хорош. Когда бы вы ни захотели утаить кусок информации, вы всегда закрываете игрокам один из потенциальных путей к успеху.
+![Friendly clues](https://cyborgsandmages.com/images/three-clue-rule-3.jpg) 
+
+Максима *«улик много не бывает»* крайне важна, так как естественным импульсом любого создателя сценария-загадки, как мне видится, является стремление к сокрытию информации. Это логично, ведь в конце концов любая «Тайна» характерна именно недостатком информации. И вот как раз здесь кроется разница между *«у нас много улик»* и *«убийца написал свой домашний адрес кровью на стене»*. Как бы-то ни было, соблазн сокрытия информации скорее вреден чем хорош. Когда бы вы ни захотели утаить кусок информации, вы всегда закрываете игрокам один из потенциальных путей к успеху.
 
 Это возвращает нас к совету Гэрриотта: *Если нет причин для того чтобы дверь не выносилась из пушки, игрок должен быть вознаграждён за своё оригинальное мышление.*
 
@@ -163,7 +165,7 @@ translator: pnprpg
 
 **Вывод \#2: Проактивные улики**
 
-![Beat'em up!](https://cyborgsandmages.com/images/three-clue-rule-4.jpg) *Также известные как «Вдарь Им По Голове Вот Этим»* Иногда, презрев ваши наилучшие устремления, игроки сами себя заводят в тупик. Они не понимают значения улик, или они игнорируют улики, или они делают на основании улик скороспелые и некорректные выводы, которые и ведут их в совершенно неверном направлении. Даже при использовании Правила Трёх Улик это может произойти, если игроки не поймут в чём же кроется тайна, ведь далеко не каждая тайна настолько очевидна как мёртвое тело. И это – тот самый случай, когда нужен запасной план. Проблемой подобного сценария становится пассивность персонажей, потому что они не обладают нужной информацией или же потому что они идут по неверному пути. *Логичным решением, в таком случае, будет нечто самостоятельно свалившееся им на голову.*
+![Beat'em up!](https://cyborgsandmages.com/images/three-clue-rule-4.webp) *Также известные как «Вдарь Им По Голове Вот Этим»* Иногда, презрев ваши наилучшие устремления, игроки сами себя заводят в тупик. Они не понимают значения улик, или они игнорируют улики, или они делают на основании улик скороспелые и некорректные выводы, которые и ведут их в совершенно неверном направлении. Даже при использовании Правила Трёх Улик это может произойти, если игроки не поймут в чём же кроется тайна, ведь далеко не каждая тайна настолько очевидна как мёртвое тело. И это – тот самый случай, когда нужен запасной план. Проблемой подобного сценария становится пассивность персонажей, потому что они не обладают нужной информацией или же потому что они идут по неверному пути. *Логичным решением, в таком случае, будет нечто самостоятельно свалившееся им на голову.*
 
 Совет [Рэймонда Чандлера](http://ru.wikipedia.org/wiki/%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A7%D0%B0%D0%BD%D0%B4%D0%BB%D0%B5%D1%80), касательно подобных тупиков звучит так: *«Пусть в комнату войдёт парень с пушкой»*. Моё собственное решение для того же случая – *«Злодей узнаёт о расследовании и посылает ребят устранить персонажей или подкупить их»*.
 
