--- a/src/content/posts/translations/alexandrian-failure-for-the-beginning-gm.mdx
+++ b/src/content/posts/translations/alexandrian-failure-for-the-beginning-gm.mdx
@@ -15,7 +15,7 @@ cover: ~assets/covers/failure-for-the-beginning-gm-1.jpg
 
 Текст Justin Alexander от 10 апреля 2021 г.
 
-![Неудача для начинающего Мастера, изображение №1](ttps://cyborgsandmages.com/images/failure-for-the-beginning-gm-1.jpg.jpg)
+![Неудача для начинающего Мастера, изображение №1](ttps://cyborgsandmages.com/images/failure-for-the-beginning-gm-1.jpg)
 
 Самое замечательное в неудачах в ролевых играх то, что они провоцируют творчество, повышают ставки и направляют приключения в интересных направлениях.
 
