--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-design-3-additional-inspiration.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-design-3-additional-inspiration.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Перевод - Дизайн исследования гексов. Часть 3: Дополнительное вдохновение"
+title: "Дизайн исследования гексов. Часть 3: Дополнительное вдохновение"
 date: "2023-09-22 12:00"
 description: "Дополнение к циклу статей Александриана про гекскраул в пятой редакции D&D про дизайн исследования гексов - что можно использовать в качестве вдохновения #alexandrian #gmtips #hexcrawl"
 tags: 
