--- a/src/content/posts/translations/alexandrian-hexcrwal-5e-design-2-choice-of-hexes.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrwal-5e-design-2-choice-of-hexes.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Перевод - Дизайн исследования гексов. Часть 2: Подбор гексов"
+title: "Дизайн исследования гексов. Часть 2: Подбор гексов"
 date: "2023-09-23 12:00"
 description: "Дополнение к циклу статей Александриана про гекскраул в пятой редакции D&D про дизайн исследования гексов - техники для подбора гексов #alexandrian #gmtips #hexcrawl"
 tags: 
