--- a/src/content/posts/articles/economy-dnd-model-7.mdx
+++ b/src/content/posts/articles/economy-dnd-model-7.mdx
@@ -12,7 +12,7 @@ tags:
   - Kobold Press
 ---
 
-В первых пяти частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
+В первых шести частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
 
 [Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
 
