--- a/src/content/posts/articles/economy-dnd-model-8.mdx
+++ b/src/content/posts/articles/economy-dnd-model-8.mdx
@@ -34,6 +34,51 @@ tags:
 
 [Часть 10](https://cyborgsandmages.com/posts/articles/economy-dnd-model-10)
 
+---
+
+В этой части стоит немного остановиться и подумать над некоторыми другими положениями экономической модели.
+
+## Про зелья и свитки
+
+Например, у нас имеется **зелье сопротивления огню**, которое, как мне интуитивно кажется, должно стоить не очень дорого, чтобы быть востребованным авантюристами. 
+
+Вместе с тем, базовым заклинанием для этого зелья будет являться Сопротивление энергии 3-го круга, и только свиток такого круга будет стоить уже 300 зм.
+
+А поскольку зелье явно обладает потребительскими преимуществами (может быть использовано кем угодно и эффект не требует концентрации), то и стоить оно должно больше.
+
+С другой стороны, есть и ограничения у зелья - во-первых, его нельзя влить в кого-то на расстоянии, во-вторых каждое зелье сопротивления огню или холоду защищает только от одной стихии, тогда как при сотворении заклинания можно выбрать любую стихию.
+
+Поэтому взяв в качестве базовой цены цену свитка 3-го круга наложим модификаторы стоимости:
+- без концентрации - x2
+- может быть использовано кем угодно - х2
+- невозможно использовать на расстоянии - х1/2
+- привязка к одной из пяти возможных стихий - х1/5
+
+Итоговая стоимость зелья сопротивления огню будет: 300\*2\*2\*1/2\*1/5 = 120 зм
+
+Итоговая таблица стоимости базовых зелий в итоге на данный момент приобретает следующий вид.
+
+| Зелье                           | Стоимость, зм |
+|---------------------------------|---------------|
+| Oil of etherealness             | 2500          |
+| Oil of sharpness                | 2000          |
+| Oil of Slipperiness             | 250           |
+| Potion of acid resistance       | 120           |
+| Potion of climbing              | 25            |
+| Potion of cold resistance       | 120           |
+| Potion of fire resistance       | 120           |
+| Potion of fly                   | 1200          |
+| Potion of gaseous form          | 1200          |
+| Potion of growth                | 200           |
+| Potion of heroism               | 1000          |
+| Potion of invisibility          | 300           |
+| Potion of invulnerability       | 2000          |
+| Potion of lightning  resistance | 120           |
+| Potion of speed                 | 1200          |
+| Potion of thunder resistance    | 120           |
+| Potion of vitality              | 1000          |
+| Potion of water breathing       | 50            |
+
 
 
 ---
