--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -172,9 +172,9 @@ tags:
 
 12 [Дизайн исследования гексов. Часть 3: Дополнительное вдохновение](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-design-3-additional-inspiration)
 
-13 Дополнение к исследованию гексов: Специализированные таблицы столкновений
+13 [Дополнение к исследованию гексов: Специализированные таблицы столкновений](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-specialised-tables-of-encounters)
 
-1 [Инструмент для исследования гексов: Таблица слухов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-rumor-tables)
+14 [Инструмент для исследования гексов: Таблица слухов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-rumor-tables)
 
 15 Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
 
@@ -310,7 +310,7 @@ tags:
 
 ## Прочее
 
-
+[Правило Трёх Улик](https://cyborgsandmages.com/posts/translations/alexandrian-three-clue-rule)
 
 [Ролевые игры против Повествовательных](https://cyborgsandmages.com/posts/translations/alexandrian-roleplaying-vs-storytelling)
 
@@ -391,6 +391,8 @@ Cypher v. Fate
 [Долина сапфировых волн – обновление 2023 года](https://cyborgsandmages.com/posts/translations/alexandrian-valley-of-the-sapphire-waves-2023-update)
 
 [Неудача для начинающего Мастера](https://cyborgsandmages.com/posts/translations/alexandrian-failure-for-the-beginning-gm)
+
+[Вождение детективов: Нулевой результат](https://cyborgsandmages.com/posts/translations/alexandrian-running-detectives-zero-result)
 
 ## Модуль статуса кампании
 
