--- a/src/content/posts/sage-advice/glasswall-cover.mdx
+++ b/src/content/posts/sage-advice/glasswall-cover.mdx
@@ -143,4 +143,8 @@ First, determine whether the attack roll would have hit the protected target wit
 
 Т.е. является ли объект укрытием - зависит от его относительной прочности по отношению к эффекту
 
+--- 
+
+Если у вас есть интересный вопрос для обсуждения - напишите нам в [дискорде](https://discord.gg/yrJqvCqU3w) или воспользуйтесь нашим [ботом в телеграме](https://t.me/cyborgsandmagesbot) для того что сообщить об этом вопросе.
+
 
