--- a/src/content/posts/articles/economy-dnd-model-10.mdx
+++ b/src/content/posts/articles/economy-dnd-model-10.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Экономическая модель пятой редакции Dungeons and Dragons –  часть 9'
-description: 'Экономическая модель пятой редакции Dungeons and Dragons –  часть 9'
+title: 'Экономическая модель пятой редакции Dungeons and Dragons –  часть 10'
+description: 'Экономическая модель пятой редакции Dungeons and Dragons –  часть 10'
 date: '2023-09-27'
 tags:
   - Экономика
@@ -12,7 +12,7 @@ tags:
   - Core d20 RPG
 ---
 
-В первых восьми частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
+В первых девяти частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
 
 [Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
 
@@ -37,5 +37,5 @@ tags:
 
 
 ---
-[Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-9)
+[Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-11)
 
