--- a/src/content/posts/translations/alexandrian-no-list-13.mdx
+++ b/src/content/posts/translations/alexandrian-no-list-13.mdx
@@ -12,20 +12,21 @@ translator: Станислав "Drakzar" Иванов
 
 Текст Justin Alexander от 01 августа 2022 года
 
-Список «Нет» для ДМа #13: Опасности текста в табличке, изображение №1
-Начать с пункта 1
+![Список «Нет» для ДМа #13: Опасности текста в табличке, изображение №1](https://cyborgsandmages.com/images/no-list-13-1.jpg)
+
+## Начать с пункта 1
 
 Текст, заключенный в табличку, в сценарии НРИ – это заранее прописанное повествование, что должно быть зачитано игрокам Мастером. И он выглядит примерно так:
 
-Центр комнаты наполнен огромным скоплением латуни, меди и сгнившей, изъеденной червями древесины. Огромные металлические обручи были прикреплены вокруг центральной сферы вместе с многочисленными уступами, шкивами, рычагами и рукоятками то там, то сям – все в, казалось бы, хаотичном и неосознаваемой манере.
+> Центр комнаты наполнен огромным скоплением латуни, меди и сгнившей, изъеденной червями древесины. Огромные металлические обручи были прикреплены вокруг центральной сферы вместе с многочисленными уступами, шкивами, рычагами и рукоятками то там, то сям – все в, казалось бы, хаотичном и неосознаваемой манере.
 
-(выдержка из The Complex of Zombies)
+**(выдержка из The Complex of Zombies)**
 
 Конечно, преимущество текста в табличке в том, что он может быть заготовлен заранее: он может даже дать вам шанс аккуратно продумать и подобрать слова для лучшего эффекта. Если это важная информация, что должна быть передана игрокам, поместив ее в табличку, вы практически гарантировали, что случайно не пропустите ее на игре.
 
 Например, в The Art of the Key я рассуждаю о том, как эти свойства текста в табличке делают его идеальным для передачи игрокам того, что они видят при первом заходе в комнату или локацию, четко отделяя ту информацию, что они должны автоматически распознавать из легенды или сноски к карте (даже если вы не используете полноценный текст в табличке для подобного эффекта, вам все еще пргиодится какой-нибудь текст-не-в-табличке, который будет исполнять данную функцию).
 
-Но почему же вам не стоит использовать этот инструмент?
+## Но почему же вам не стоит использовать этот инструмент?
 
 · Аккуратный подбор слов времязатратен (что может стать причиной избавиться от него в соответствии с принципами умной подготовки);
 
@@ -35,17 +36,19 @@ translator: Станислав "Drakzar" Иванов
 
 Если ведете опубликованное приключение с текстом в табличках и не хотите его использовать – по той или иной причине – вам может быть полезным выделение ключевых фактов этого самого текста, что быстро превратит его в не столь табличный:
 
-Список «Нет» для ДМа #13: Опасности текста в табличке, изображение №2
+![Список «Нет» для ДМа #13: Опасности текста в табличке, изображение №2](https://cyborgsandmages.com/images/no-list-13-2.jpg)
+
 (Как это было описано в The Art of the Key, вы можете использовать подобную технику для быстрого сбора сносок по локациям, которые не смогли отделить «очевидную глазу» информацию от скрытых секретов.
 
-Грехи таблицы
+## Грехи таблицы
+
 Однако проблемы с исполнением и недостаток гибкости – далеко не единственные причины, по которым люди не любят текст в табличках. Зачастую они были на стороне получателя плохо составленного текста, который слишком часто встречается в опубликованных приключениях, и, в результате известных их авторам некачественных примерах, домашних сценариях. Многие из этих ошибок заключаются либо в «тексте жесткой заморозки», либо «тексте внешнего контроля».
 
 Текст жесткой заморозки – этот тот, где ДМ начинает читать, и персонажи вынуждены замереть на месте, пока что-то происходит. И такие сцены могут быть весьма сложными, где они целиком разыгрываются с игроками, нетерпеливо сидящими на своих местах, исключенными из непосредственного действа и игры в игру – даже более подсупдные примеры подобного могут быть неимоверно раздражающими:
 
-Оплетающие побеги и лианы вырвались из мостовой под повозкой в начале парада. Бык, тянувший ее, запаниковал, врезавшись вместе с повозкой в помост, покрытый декорациями. Растительность сразу же оплела колеса телеги и ближайших зевак. Пара отдыхающих тут же обнажила оружие, раскрыв себя как стражников Принца Греха.
+> Оплетающие побеги и лианы вырвались из мостовой под повозкой в начале парада. Бык, тянувший ее, запаниковал, врезавшись вместе с повозкой в помост, покрытый декорациями. Растительность сразу же оплела колеса телеги и ближайших зевак. Пара отдыхающих тут же обнажила оружие, раскрыв себя как стражников Принца Греха.
 
-(выдержка из Journeys Through the Radiant Citadel)
+**(выдержка из Journeys Through the Radiant Citadel)**
 
 Однако стоит игрокам услышать, что «Оплетающие побеги и лианы вырвались из мостовой!», как они уже хотят среагировать на это. Но вместо этого все прочие участники сцены, включая даже быка (!), могут сделать это раньше них.
 
@@ -71,7 +74,8 @@ translator: Станислав "Drakzar" Иванов
 
 Очевидно, что все это может произойти в первый раунд боя, где персонажи тоже будут делать что-то, что они считают подходящим.
 
-Текст внешнего контроля
+## Текст внешнего контроля
+
 Текст внешнего контроля страдает от похожих проблем (не дает игрокам участвовать в происходящем), более того, он коварно делает еще один шаг вперед, заявляя о мыслях, чувствах или (что еще хуже!) действиях персонажей игроков.
 
 · «Вы смотрите на разрушенную аллею и вас охватывает грусть»;
@@ -103,3 +107,12 @@ translator: Станислав "Drakzar" Иванов
 · Диалог.
 
 И так далее. Существует множество возможных опытов, и некоторые из них могут быть свойственны лишь конкретному игроку. Вы, к примеру, никогда не узнаете, как на самом деле его персонаж о чем-то думает или чувствует. И это нормально. Важно то, что они знают, и оно должно формировать его действия и ход всей кампании.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
