--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-design-1.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-design-1.mdx
@@ -97,7 +97,7 @@ translator: Станислав "Drakzar" Иванов
 
 ### F15 – Скала-череп (в реке)
 
-[Дополнение к исследованию гексов: Дизайн, изображение №2](https://cyborgsandmages.com/images/hexcrawl-5e-design-2.jpg)
+![Дополнение к исследованию гексов: Дизайн, изображение №2](https://cyborgsandmages.com/images/hexcrawl-5e-design-2.jpg)
 
 Скала в форме черепа, торчащая из реки. Если проползти через рот, попадаешь в склеп.
 Область 1: Мумифицированная голова красного дракона (огромная). Дышит пламенем, что заполняет большую часть комнаты (огненный шар, сложность 14). Секретный вход в зал с сокровищами находится под головой).
