--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -166,7 +166,7 @@ tags:
 
 9 [Инструменты исследования гексов: следы](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-tools)
 
-10
+10 [Дополнение к исследованию гексов: Дизайн](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-design-1)
 
 11 [Дизайн исследования гексов. Часть 2: Подбор гексов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrwal-5e-design-2-choice-of-hexes)
 
@@ -305,6 +305,7 @@ tags:
 ## Список «Нет» для Мастера
 
 [Список «Нет» для Мастера № 13: Опасности текста в табличке](https://cyborgsandmages.com/posts/translations/alexandrian-dont-13)
+
 
 [Список «Нет» для Мастера № 15: Заблуждение водящего по рельсам](https://cyborgsandmages.com/posts/translations/alexandrian-dont-15)
 
