--- a/src/content/posts/translations/acks-2-chapter-8.mdx
+++ b/src/content/posts/translations/acks-2-chapter-8.mdx
@@ -12,6 +12,7 @@ author: Alexander Macris
 translator: Snarls
 ---
 
+[Оригинал](https://docs.google.com/document/d/1Nj0CwYhHKXGixlQN_yczU9TSvyuj0ENcIJrTeHxdraw/edit#heading=h.wqjjmf6l3eqk)
 
 В течение множества приключений, если судьба авантюристов сложится хорошо, они обретут славу, богатство и власть. В конце концов они захотят оставить долговременный след в своем мире. Некоторые могут стать духовными лидерами бесчисленных фанатичных верующих, другие - овладеть магической силой, погружаясь в глубины утерянных знаний для изучения новых заклинаний, создания могучих големов или даже став нежитью. Иные ищут преходящей власти, строя крепости и управляя владениями, или стремятся к материальному богатству, занимаясь торговлей и другими прибыльными делами.
 
