--- a/src/content/posts/translations/Arbrethil-social-interactions-1.mdx
+++ b/src/content/posts/translations/Arbrethil-social-interactions-1.mdx
@@ -32,6 +32,9 @@ author: Arbrethil
 
 Легко возразить, что взятка - это не убеждение в традиционном смысле, а, наоборот, проявление моральных качеств. Но этот пример легко распространить и на другие формы харизматического влияния:
 
+![Image](https://cyborgsandmages.com/images/arberthil-social-interactions-1-1.jpg) 
+
+
 "Хм, может быть, попробовать запугивание?".
 
 \- Дракон может быть гордым и тщеславным, открытым для лести; а может быть проницательным и проницательным, и наказать такую прозрачную уловку.
@@ -45,6 +48,8 @@ author: Arbrethil
 "А как же обычная Дипломатия, взаимодействие по умолчанию?" Такого понятия не существует. "Дипломатия" может означать протокол, может означать лесть, может означать торг, но на самом деле нет такого понятия, как обычное дипломатическое действие. Новые издания, смешивающие эти понятия, неоправданно замутнили эту воду.
 
 Интересно, что многие игры старой школы правильно понимают последний пункт, даже когда реакция рассматривается с ориентацией на персонажа игрока: Мораль - это атрибут существа, указывающий на его готовность сражаться или сопротивляться запугиванию. Можно представить, что тщеславие и верность - это аналогичные показатели, отражающие открытость существа к лести и соблазну соответственно. Очевидным недостатком такого подхода является то, что для каждого существа приходится отслеживать множество дополнительных цифр. Если проанализировать бестиарий Б/Х, то 42% (88/208) различных монстров имеют тривиальные показатели Морали (либо +0, либо всегда удается); добавление дополнительных атрибутов, скорее всего, потребует больше работы, чем того стоит. Но когда такие вопросы все же возникают, мораль - гораздо более подходящая основа для вынесения решения, чем проверка Хар, и ее имеет смысл изменять, исходя из соображений "прикрывают ли меня мои приятели?", а не "угрожали ли они особенно ужасно?". И снова детали обстоятельств имеют большее значение, чем качество призыва.
+
+![Image](https://cyborgsandmages.com/images/arberthil-social-interactions-1-2.jpg) 
 
 Аналогично, рассмотрим броски лояльности. В AD&D 1e DMG есть обширная таблица модификаторов лояльности для приспешников - поправки зависят от характера отношений, их продолжительности, степени подготовки приспешника, размера получаемого вознаграждения, обращения, расовых предпочтений приспешника и его Мировоззрения и т.д. Существует также бонус к харизме и Мировоззрению нанимателя. Однако в целом харизма нанимателя отнюдь не является доминирующим фактором - максимальный бонус к харизме составляет +40 к d%. Для сравнения: простое пребывание в качестве приспешника дает +35% Лояльности. Присутствие сеньора дает +15%, и еще +5% за каждого живого приспешника в пределах видимости - при таком раскладе мои игроки, даже считая приспешников одного сеньора, который дает всем приспешникам Лояльность, легко получают +70% при погружении, даже не учитывая лечение, подарки магических предметов и тому подобное.
 
