--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -304,10 +304,35 @@ tags:
 
 ## Список «Нет» для Мастера
 
-[Список «Нет» для Мастера № 13: Опасности текста в табличке](https://cyborgsandmages.com/posts/translations/alexandrian-dont-13)
+1
 
+2
 
-[Список «Нет» для Мастера № 15: Заблуждение водящего по рельсам](https://cyborgsandmages.com/posts/translations/alexandrian-dont-15)
+3
+
+4
+
+5
+
+6
+
+7
+
+8
+
+9
+
+10
+
+11
+
+12
+
+13 [Список «Нет» для Мастера № 13: Опасности текста в табличке](https://cyborgsandmages.com/posts/translations/alexandrian-dont-13)
+
+14
+
+15 [Список «Нет» для Мастера № 15: Заблуждение водящего по рельсам](https://cyborgsandmages.com/posts/translations/alexandrian-dont-15)
 
 ## Прочее
 
