--- a/src/content/posts/translations/Arbrethil-social-interactions-2.mdx
+++ b/src/content/posts/translations/Arbrethil-social-interactions-2.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Социальное взаимодействие Часть 1: Проблема убеждения"
+title: "Социальное взаимодействие Часть 2: Проблема социального боя"
 description: Перевод статьи про социальные взаимодействия
-date: 2023-05-17
+date: 2023-09-28
 tags:
   - социальные взаимодействия
   - Советы Мастеру
@@ -12,53 +12,66 @@ tags:
 author: Arbrethil
 ---
 
-Социальное взаимодействие направлено на цель
+Убеждение против истощения
 
-## Сущность убеждения
+В первой части книги "Социальное взаимодействие" я обсуждал общие проблемы, связанные с тем, что убеждение в первую очередь зависит от мастерства говорящего, в то время как оно, скорее, должно быть связано с открытостью объекта воздействия к конкретному подходу. В конце я упомянул о своем намерении изучить ряд систем социальных боев; эта идея оказалась более широкой, чем я ожидал, и в настоящее время я ознакомился с большим количеством систем социальных боев и других механизмов взаимодействия (и если у кого-то есть другие заметные дополнения, мне будет интересно узнать об этом). Почти все они четко делятся на два лагеря, которые я называю системами, основанными на сложности и на защите.
 
-В течение всего обучения в колледже я участвовал в национальных соревнованиях по дебатам и, конечно, не раз задумывался над искусством риторики и убеждения, и считаю верным обычное мнение о том, что дебаты, как правило, не особенно убеждают, когда речь идет о том, чтобы изменить мнение людей. Исключение, конечно, составляют темы, по которым мнение еще не сформировано, - в этом случае убедительные аргументы могут быть весьма убедительными. Но в целом люди устроены по-своему, и их мнение трудно изменить.
+Хотя я не вижу никаких фундаментальных механических причин, набор игр, которые обычно считаются социальными боевыми системами, кажется, почти полностью совпадает с теми, которые основаны на обороне. Также примечательно, что, вопреки моим первоначальным ожиданиям, эта группа не разбилась по линиям GNS, и в ней с обеих сторон наблюдается устойчивое сочетание всех трех систем.
 
-Французский философ Блез Паскаль мудро писал: "Когда мы хотим исправить с пользой для себя и показать другому, что он заблуждается, мы должны заметить, с какой стороны он смотрит на дело, ибо с этой стороны оно обычно истинно, и признать за ним эту истину, но открыть ему ту сторону, с которой оно ложно. Это его устраивает, так как он видит, что не ошибся, а только не увидел всех сторон... Как правило, людей лучше убеждают те причины, которые они обнаружили сами, чем те, которые пришли в голову другим". Настоящее убеждение заключается в том, чтобы сформулировать вопросы так, чтобы они согласовывались с тем, во что люди уже верят, и показать, как то, что кто-то уже считает истинным, естественным образом предполагает другую позицию.
+## Системы, основанные на трудностях
 
-Таким образом, очень важно понимать, что убеждение в большей степени зависит от человека, которого убеждают, чем от обоснованности представленных аргументов. Аналогичным образом, та или иная попытка в значительной степени зависит от того, насколько восприимчива к ней цель. Это не значит, что сила попытки не имеет значения - плохая попытка может оказаться неудачной даже при правильных призывах, - но обстоятельства и мнения объекта являются принципиально необходимыми компонентами для реальной имитации взаимодействия.
+В системах, основанных на сложности, взаимодействие обычно решается одним броском против целевого числа, установленного на основе сложности представленного действия. Когда сложность определяется количественно, она обычно отражается в стоимости и риске.
 
-Однако понять восприятие и позицию персонажей в ролевой игре - это довольно сложная и ненужная работа, а еще сложнее объективно оценить их значимость, чтобы они могли оказать механическое воздействие. В связи с этим возникает более простой путь: как люди предпочитают определенные аргументы, так и они предпочитают определенные подходы.
+**Основные преимущества:** переменная сложность в зависимости от действия, быстрое решение
 
-Например, вы положительно реагируете на предложение незнакомцев из Интернета подписаться на рассылку, верно?
+**Основные помехи:** отсутствие строгих заданий сложности, часто бинарные результаты
 
-## Убеждение в ролевых играх
+**Основные примеры:** D&D, Dungeon World, Ironsworn, Blades in the Dark, SWN, Traveller.
 
-В терминах D&D один стражник может быть подкуплен, а другой - нет, и это в гораздо большей степени зависит от подкупаемого стражника (и размера взятки), чем от мастерства, с которым взятка предлагается. Настоящее мастерство заключается в том, чтобы знать, какому охраннику и в каком размере предложить взятку. Примечательно, что в игре в традициях D&D это навыки игрока.
+В **D&D**, начиная с B/X и AD&D до 3.5e, реализован достаточно хороший пример этой схемы. Броски убеждения делаются по таблице результатов, что создает небинарные возможности. В D&D 3e это еще более усовершенствовано за счет индексации возможных результатов и трудностей в зависимости от текущего отношения цели к вам. К сожалению, после 3.5e эта возможность, похоже, была в значительной степени утрачена, и 5e возвращается к бинарным проверкам навыков.
 
-Легко возразить, что взятка - это не убеждение в традиционном смысле, а, наоборот, проявление моральных качеств. Но этот пример легко распространить и на другие формы харизматического влияния:
+**Б/Х** бросает 2д6 вместо 1к20, что разумно взвешивает результаты в сторону центра, так что большинство людей реагируют разумно, а крайняя дружелюбность или враждебность в отсутствие модификаторов - редкость. ACKS делает еще один шаг вперед, позволяя взаимодействовать в несколько раундов и включая таблицы модификаторов обстоятельств, хотя и не позволяет интегрировать ценности и предпочтения отдельных персонажей (хотя я не уверен, что любая система делает это по умолчанию).
 
-![Image](https://cyborgsandmages.com/images/arberthil-social-interactions-1-1.jpg) 
+**AD&D** имеет неравномерный интервал между бросками d100, что, как ни странно, приводит к смещению результатов в сторону краев и делает сильные реакции более вероятными, чем умеренные.
 
+В Dungeon World используются статичные числа целей, что не позволяет гибко использовать разные попытки с разной сложностью. Ironsworn поначалу кажется, что это то же самое, но структурирование взаимодействия в виде трека, а не одного броска, решает эту проблему.
 
-"Хм, может быть, попробовать запугивание?".
+**Traveller** хорошо справляется с проблемой строгих заданий сложности, предоставляя множество примеров для обоснования претензий, и таким образом, пожалуй, лучше всех использует переменную сложность в зависимости от действий и обстоятельств. Можно утверждать, что BitD делает то же самое, но, на мой взгляд, ей не хватает достаточной детализации и возможности складывать преимущества (это более общая критика системы, хотя она и играет быстро).
 
-\- Дракон может быть гордым и тщеславным, открытым для лести; а может быть проницательным и проницательным, и наказать такую прозрачную уловку.
+## Системы, основанные на обороне
 
-\- Герцогиня либо открыта для соблазнения, либо нет, и это, как правило, больше относится к ней, чем к соблазнителю, если только он соответствует ее стандартам (как бы ему ни хотелось думать иначе).
+Системы, основанные на обороне, рассматривают социальное взаимодействие примерно так же, как и бой, с некими "социальными хитами", ментальными защитами, которые отрабатываются в течение нескольких раундов взаимодействия, социальной инициативой и механически определенными действиями.
 
-\- Граф может быть хитрым переговорщиком, готовым торговаться по поводу выкупа, который он предложил за возвращение любимого приспешника, или же он может счесть такие переговоры ниже своего достоинства и полностью отказаться от них.
+**Основные преимущества:** строгая механика, сложность взаимодействий
 
-\- Орк - либо трус, который сдастся, когда его окружат, либо воин, который будет сражаться до смерти.
+**Основные помехи:** затянутость
 
-"А как же обычная Дипломатия, взаимодействие по умолчанию?" Такого понятия не существует. "Дипломатия" может означать протокол, может означать лесть, может означать торг, но на самом деле нет такого понятия, как обычное дипломатическое действие. Новые издания, смешивающие эти понятия, неоправданно замутнили эту воду.
+**Примеры:** FATE, ASOIAF Roleplaying, FFG Star Wars, Legend of the Five Rings, Burning Wheel, Ascendant.
 
-Интересно, что многие игры старой школы правильно понимают последний пункт, даже когда реакция рассматривается с ориентацией на персонажа игрока: Мораль - это атрибут существа, указывающий на его готовность сражаться или сопротивляться запугиванию. Можно представить, что тщеславие и верность - это аналогичные показатели, отражающие открытость существа к лести и соблазну соответственно. Очевидным недостатком такого подхода является то, что для каждого существа приходится отслеживать множество дополнительных цифр. Если проанализировать бестиарий Б/Х, то 42% (88/208) различных монстров имеют тривиальные показатели Морали (либо +0, либо всегда удается); добавление дополнительных атрибутов, скорее всего, потребует больше работы, чем того стоит. Но когда такие вопросы все же возникают, мораль - гораздо более подходящая основа для вынесения решения, чем проверка Хар, и ее имеет смысл изменять, исходя из соображений "прикрывают ли меня мои приятели?", а не "угрожали ли они особенно ужасно?". И снова детали обстоятельств имеют большее значение, чем качество призыва.
+FATE доводит эту парадигму до логического предела и рассматривает социальное взаимодействие точно так же, как и бой, с разными навыками, но в остальном идентичными во всех отношениях (за исключением того, что есть необязательные правила для добавления доспехов и оружия, которые здесь не имеют никакого соответствия). Как и все в FATE, в итоге все выглядит довольно шаблонно.
 
-![Image](https://cyborgsandmages.com/images/arberthil-social-interactions-1-2.jpg) 
+ASOIAF Roleplaying и Burning Wheel лучше справляются с задачей сделать это интересным, хотя я думаю, что ASOIAF стал бы повторяться. Что касается "Горящего колеса", то, чтобы понять, как оно должно работать, группе придется повторяться, но, похоже, оно создает несколько интересных вариантов, хотя ему не мешало бы поучиться у En Garde тому, как заставлять игроков совершать телеграфные маневры, чтобы сделать игру более тактической, а не "камень-ножницы-бумага".
 
-Аналогично, рассмотрим броски лояльности. В AD&D 1e DMG есть обширная таблица модификаторов лояльности для приспешников - поправки зависят от характера отношений, их продолжительности, степени подготовки приспешника, размера получаемого вознаграждения, обращения, расовых предпочтений приспешника и его Мировоззрения и т.д. Существует также бонус к харизме и Мировоззрению нанимателя. Однако в целом харизма нанимателя отнюдь не является доминирующим фактором - максимальный бонус к харизме составляет +40 к d%. Для сравнения: простое пребывание в качестве приспешника дает +35% Лояльности. Присутствие сеньора дает +15%, и еще +5% за каждого живого приспешника в пределах видимости - при таком раскладе мои игроки, даже считая приспешников одного сеньора, который дает всем приспешникам Лояльность, легко получают +70% при погружении, даже не учитывая лечение, подарки магических предметов и тому подобное.
+Legend of the Five Rings, Burning Wheel и Ascendant делают некоторые интересные вещи, чтобы смягчить проблемы истощения путем пересмотра взаимодействия, о чем речь пойдет ниже, но сначала стоит понять, почему истощение - это плохая модель социального взаимодействия.
 
-То, что косвенные модификаторы и выбор подхода преобладают, на мой взгляд, хорошо для игры. Когда врожденная статистика и способности персонажа оказывают большее влияние на исход, чем детали текущих обстоятельств, то для мастерства игрока остается мало места. И наоборот, когда модификаторы обстоятельств оказываются важнее статистики персонажа, появляется большой простор для искусной игры, позволяющей совершать благоприятные маневры, а игра в целом становится более сложной и динамичной. Лояльность приспешников, на которую влияет отношение к ним, напрямую связывает действия игрока с результатами игры и дает ему возможность больше влиять на развитие событий в мире. Это будет проще для тех, у кого высокий хар, как и должно быть, но игра выигрывает, когда есть возможность покрыть недостаток таланта игрока в разумных обстоятельствах - и, возможно, наибольшее удовольствие возникает, когда навыки игрока синергируют с талантом персонажа, позволяя достичь того, что иначе было бы невозможно.
+## Проблема истощения
 
-## Мысли о решении
+Проблемы с убеждением, основанным на проверке, достаточно очевидны. Проблема с социальным боем менее очевидна, и на ней стоит остановиться подробнее. По сути, она сводится к тому, что практически все ролевые игры моделируют бой как истощение. Вы сражаетесь с противником, постепенно истощая его физическое здоровье и выносливость, пока он не достигнет 0 hp/последнего стресса/и т.д., и тогда он совершит критическую ошибку, и вы выведете его из строя.
 
-Конечно, недостатком отличной механики лояльности AD&D является то, что она сложна и требует обширного поиска в таблицах. Это сглаживается тем, что Лояльность может быть рассчитана заранее и обычно не меняется существенно до тех пор, пока не произойдет что-то, что вызовет переоценку, но, тем не менее, в целом желательно самое простое решение, сохраняющее результаты.
+Проблема в том, что это совсем не то, как работает взаимодействие, и, тем не менее, именно так представляют его большинство социальных боевых систем, которые я читал. "Вы спорите с оппонентом, постепенно истощая его психическую стойкость и выносливость, пока он не достигнет 0 ментальных хп/пометит свой последний стресс/и т.д., и тогда вы приводите блестящий аргумент или предложение, и он соглашается с вами."
 
-Я все еще проверяю и уточняю свои мысли по этому вопросу, и они ни в коем случае не являются окончательными. Но я считаю, что система морали заслуживает дальнейшего изучения. Можно определить несколько подходов, и тогда существа будут иметь бонус или штраф за приближение к каждому из них, что будет передаваться через черты характера и становиться ощутимым для игроков. Например, к проницательному, но жадному дворянину лучше подходить с помощью подкупа, а не лести. Некоторые из этих модификаторов могут быть специфичны для конкретного человека, другие могут быть расовыми или культурными (варварский военачальник вряд ли будет хорошо реагировать на придворные формальности, но большинство драконов можно подкупить или польстить). Для упрощения и предотвращения появления большого количества модификаторов, большинство существ не должны иметь модификаторов при большинстве подходов, а тривиальные модификаторы будут просто не перечислены.
+В реальной жизни, когда вы изматываете человека спорами, он расстраивается, и ваши отношения ухудшаются. Они вряд ли примут вашу позицию или уступят, если у них нет возможности просто уйти (допрос заключенного или издевательства над человеком, с которым вы часто общаетесь, могут быть эффективны по этой причине).
 
-Я продолжаю размышлять над тем, как еще больше упростить эту структуру и сделать ее менее отслеживаемой (и более короткой). Тем временем я надеюсь в ближайшие несколько дней рассмотреть ряд систем "социального боя", которые якобы сделали взаимодействие более полноценным видом игры.
+Кроме того, у людей может быть совершенно разное количество "ментального хп" в зависимости от темы разговора, и это моделируется лишь эпизодически. Но убедить лорда предложить свою дочь в жены или предоставить вам земли и вассалитет, как правило, значительно сложнее, чем убедить его принять вас на несколько ночей.
+
+В **"Легенде о Пяти Кольцах"** эта аттрактивная схема уместна благодаря акценту на чести и позоре: проиграть - значит потерять самообладание и уйти с позором, или быть загнанным в угол на дуэли, чтобы вернуть его, и т.п. Это аттракцион, но очень зависимый от обстановки; для игры, где он работает, предпосылка выглядит вполне здравой.
+
+В **"Горящем колесе"** также уместны аттракционные рамки, поскольку механика игры ориентирована на публичные дебаты, где целью является убеждение аудитории, а не оппонента. Мне доводилось участвовать в публичных дебатах, и, хотя attrition не идеальна, общая идея опровержения аргументов оппонентов и подрыва их аргументов при сохранении своих собственных не так уж далека от реальности и очень удобна для игры.
+
+**Ascendant** использует новый подход, разделяя различные подсистемы взаимодействия: привлечение и влияние на толпу, дружба и влияние на NPC, запугивание NPC и допрос NPC - основные составляющие. Это позволяет использовать Решительность как ментальное хп для попыток Запугивания, признавая, что нанесение Психического урона на самом деле не помогает заводить друзей. Здесь много интересных и тонких взаимодействий, но это в значительной степени игра про супергероев, и механика это подтверждает (при человеческом уровне харизмы блестящий оратор все еще может быть перевешен обстоятельствами; когда оратор в несколько десятков раз харизматичнее самых влиятельных и убедительных людей, которые когда-либо жили, обстоятельства разумно имеют меньшее значение).
+
+## Работа над решениями
+
+Социальные боевые системы имеют тенденцию к затягиванию, они наделяют персонажей конкретными средствами защиты от определенных подходов и склоняют их к определенным способам взаимодействия. Они также имеют тенденцию быть более строгими в механическом плане, но, как и в бою, в них отсутствует механизм быстрого разрешения ситуации (что кажется более существенным упущением, учитывая, что банальные разговоры происходят несколько чаще, чем банальные драки).
+
+Противоположной аттрактивной системе концептуализации социального взаимодействия была бы импульсная система, в которой каждый успех ведет к дальнейшему успеху, а провал делает будущий провал более уверенным. В бою такие системы (например, трек состояния в Star Wars d20) не приветствуются, поскольку ведут к смертельным спиралям. Я не убежден, что это проблема для социального взаимодействия; это, безусловно, соответствует тому, как социальное взаимодействие обычно работает на самом деле. Людей, которым вы уже нравитесь, легче узнать получше, они с большей вероятностью согласятся с вами и будут более открыты к более тонким позициям (и наоборот). Однако стоит подробнее изучить вопрос о том, является ли это хорошим результатом для игрового процесса.
