--- a/src/content/posts/translations/Arbrethil-social-interactions-3.mdx
+++ b/src/content/posts/translations/Arbrethil-social-interactions-3.mdx
@@ -12,12 +12,22 @@ tags:
 author: Arbrethil
 ---
 
+[Часть 1](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-1)
+
+[Часть 2](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-2)
+
+[Часть 3](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-3)
+
+---
 
 Масштаб и степень
 
 Персонаж, обученный какому-либо навыку в какой-либо ролевой игре, обычно становится лучше в этом навыке по мере роста его уровня и опыта. Тот, кто на 1-м уровне умеет ходить по натянутому канату, может продолжать развивать этот талант, пока на 20-м уровне не будет взбегать по стеклянным стенам или балансировать на облаках.
 
 Нужно только бросить КС 120...
+
+
+![Image](https://cyborgsandmages.com/images/arberthil-social-interactions-3.jpg) 
 
 Социальные навыки должны развиваться аналогичным образом. В 3-й редакции D&D это было представлено как продвижение от сглаживания недружелюбия и, возможно, вызова случайной благосклонности к высоким уровням, способным за несколько минут привести богов и королей от открытой войны к дружеским отношениям. Это почему-то считалось ОП, а социально-ориентированные персонажи отвергались как приемлемый вариант. С тех пор многие игры повторяют эту схему, не признавая ошибки в таком масштабировании.
 
