--- a/src/content/posts/translations/Arbrethil-social-interactions-1.mdx
+++ b/src/content/posts/translations/Arbrethil-social-interactions-1.mdx
@@ -12,6 +12,14 @@ tags:
 author: Arbrethil
 ---
 
+[Часть 1](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-1)
+
+[Часть 2](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-2)
+
+[Часть 3](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-3)
+
+---
+
 Социальное взаимодействие направлено на цель
 
 ## Сущность убеждения
