--- a/src/content/posts/translations/Arbrethil-social-interactions-2.mdx
+++ b/src/content/posts/translations/Arbrethil-social-interactions-2.mdx
@@ -12,9 +12,17 @@ tags:
 author: Arbrethil
 ---
 
+[Часть 1](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-1)
+
+[Часть 2](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-2)
+
+[Часть 3](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-3)
+
+---
+
 Убеждение против истощения
 
-В первой части книги "Социальное взаимодействие" я обсуждал общие проблемы, связанные с тем, что убеждение в первую очередь зависит от мастерства говорящего, в то время как оно, скорее, должно быть связано с открытостью объекта воздействия к конкретному подходу. В конце я упомянул о своем намерении изучить ряд систем социальных боев; эта идея оказалась более широкой, чем я ожидал, и в настоящее время я ознакомился с большим количеством систем социальных боев и других механизмов взаимодействия (и если у кого-то есть другие заметные дополнения, мне будет интересно узнать об этом). Почти все они четко делятся на два лагеря, которые я называю системами, основанными на сложности и на защите.
+В первой части статьи [**"Социальное взаимодействие"**](https://cyborgsandmages.com/posts/translations/arbrethil-social-interactions-1) я обсуждал общие проблемы, связанные с тем, что убеждение в первую очередь зависит от мастерства говорящего, в то время как оно, скорее, должно быть связано с открытостью объекта воздействия к конкретному подходу. В конце я упомянул о своем намерении изучить ряд систем социальных боев; эта идея оказалась более широкой, чем я ожидал, и в настоящее время я ознакомился с большим количеством систем социальных боев и других механизмов взаимодействия (и если у кого-то есть другие заметные дополнения, мне будет интересно узнать об этом). Почти все они четко делятся на два лагеря, которые я называю системами, основанными на сложности и на защите.
 
 Хотя я не вижу никаких фундаментальных механических причин, набор игр, которые обычно считаются социальными боевыми системами, кажется, почти полностью совпадает с теми, которые основаны на обороне. Также примечательно, что, вопреки моим первоначальным ожиданиям, эта группа не разбилась по линиям GNS, и в ней с обеих сторон наблюдается устойчивое сочетание всех трех систем.
 
@@ -75,3 +83,5 @@ Legend of the Five Rings, Burning Wheel и Ascendant делают некотор
 Социальные боевые системы имеют тенденцию к затягиванию, они наделяют персонажей конкретными средствами защиты от определенных подходов и склоняют их к определенным способам взаимодействия. Они также имеют тенденцию быть более строгими в механическом плане, но, как и в бою, в них отсутствует механизм быстрого разрешения ситуации (что кажется более существенным упущением, учитывая, что банальные разговоры происходят несколько чаще, чем банальные драки).
 
 Противоположной аттрактивной системе концептуализации социального взаимодействия была бы импульсная система, в которой каждый успех ведет к дальнейшему успеху, а провал делает будущий провал более уверенным. В бою такие системы (например, трек состояния в Star Wars d20) не приветствуются, поскольку ведут к смертельным спиралям. Я не убежден, что это проблема для социального взаимодействия; это, безусловно, соответствует тому, как социальное взаимодействие обычно работает на самом деле. Людей, которым вы уже нравитесь, легче узнать получше, они с большей вероятностью согласятся с вами и будут более открыты к более тонким позициям (и наоборот). Однако стоит подробнее изучить вопрос о том, является ли это хорошим результатом для игрового процесса.
+
+[Оригинал](https://arbrethil.substack.com/p/social-interaction-part-2-the-problem)
